# gamygdala_cpp

./: .gitignore  .gitmodules  CMakeLists.txt
include/: agent.h  emotion.h  gamygdala.h  goal.h
source/: CMakeLists.txt
src/: agent.cc  agent.h  gamygdala.h  goal.cc
test/: CMakeLists.txt
